clusters/management-hub/qnap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qnap
  namespace: traefik-ext
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qnap
  namespace: traefik-ext
subsets:
  - addresses:
      - ip: 192.168.253.10
    ports:
      - name: http
        port: 8080
        protocol: TCP
