clusters/management-hub/qnap/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qnap
  namespace: traefik-ext
  annotations:
    kubernetes.io/ingress.class: traefik-ext
    external-dns.alpha.kubernetes.io/hostname: qnap.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qnap.nwlnexus.net`)
      kind: Rule
      services:
        - name: qnap
          port: 8080
  tls:
    secretName: qnap-tls
